<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="spell_checker_service_name">HeliBoard Spell Checker</string>
    <string name="ime_settings">HeliBoard Settings</string>
    <string name="android_spell_checker_settings">HeliBoard Spell Checker Settings</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="vibrate_in_dnd_mode">Vibrate in do not disturb mode</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="suggest_emojis">Suggest emojis</string>
    <string name="suggest_emojis_summary">Use emoji dictionary in normal suggestions</string>
    <string name="show_emoji_descriptions">Show emoji description on long press</string>
    <string name="show_emoji_descriptions_summary">Requires an emoji dictionary</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_category_additional_keys">Additional keys</string>
    <string name="settings_category_clipboard_history">Clipboard history</string>
    <string name="settings_category_correction">Corrections</string>
    <string name="settings_category_space">Space</string>
    <string name="settings_category_suggestions">Suggestions</string>
    <string name="settings_category_experimental">Experimental</string>
    <string name="settings_category_miscellaneous">Miscellaneous</string>
    <string name="enable_split_keyboard">Enable split keyboard</string>
    <string name="enable_split_keyboard_landscape">Enable split keyboard (landscape)</string>
    <string name="split_spacer_scale">Split distance</string>
    <string name="split_spacer_scale_landscape">Split distance (landscape)</string>
    <string name="language_switch_key_switch_input_method">Switch to other input methods</string>
    <string name="switch_language">Switch Language</string>
    <string name="language_switch_key_switch_both">Switch both</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="language_switch_key_behavior">Language switch key behavior</string>
    <string name="show_emoji_key">Emoji key</string>
    <string name="abbreviation_unit_milliseconds">%s ms</string>
    <string name="abbreviation_unit_minutes">%s min</string>
    <string name="settings_system_default">System default</string>
    <string name="settings_no_limit">No limit</string>
    <string name="use_contacts_dict">Look up contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_apps_dict">Look up app names</string>
    <string name="use_apps_dict_summary">Use names of installed apps for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="disable_personalized_dicts_message">Warning: Disabling this setting will clear learned data</string>
    <string name="add_to_personal_dictionary">Add words to personal dictionary</string>
    <string name="add_to_personal_dictionary_summary">Use device personal dictionary to store learned words</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_always_show_suggestions">Always show suggestions</string>
    <string name="prefs_always_show_suggestions_summary">Ignore other apps’ request to disable suggestions (may cause issues)</string>
    <string name="prefs_always_show_suggestions_except_web_text">Don’t always show suggestions for web edit fields</string>
    <string name="prefs_always_show_suggestions_except_web_text_summary">Web edit fields (mostly found in browsers) are a very common cause for issues with the always show suggestions setting</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="autocorrect">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="more_autocorrect">More auto-correction</string>
    <string name="more_autocorrect_summary">Auto-correct even when not explicitly requested by the input field</string>
    <string name="auto_correction_confidence">Auto-correction confidence</string>
    <string name="auto_correct_shortcuts">Auto-correct shortcuts</string>
    <string name="auto_correct_shortcuts_summary">When enabled shortcuts might be expanded by autocorrect</string>
    <string name="backspace_reverts_autocorrect">Backspace reverts autocorrect</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="center_suggestion_text_to_enter">Always use middle suggestion</string>
    <string name="center_suggestion_text_to_enter_summary">On pressing space or punctuation, the middle suggestion will be entered</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="suggest_clipboard_content">Suggest clipboard content</string>
    <string name="suggest_clipboard_content_summary">Show recently copied clipboard content as a suggestion</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_static">Floating preview</string>
    <string name="gesture_floating_preview_static_summary">See the suggested word while gesturing</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_dynamic_summary">Move the preview during a gesture</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="gesture_fast_typing_cooldown">Rapid typing cooldown</string>
    <string name="gesture_fast_typing_cooldown_instant">Always start instantly</string>
    <string name="gesture_trail_fadeout_duration">Gesture trail lifespan</string>
    <string name="enable_clipboard_history">Enable clipboard history</string>
    <string name="enable_clipboard_history_summary">If disabled, clipboard key will paste clipboard content if any</string>
    <string name="clipboard_history_retention_time">History retention time</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="delete_swipe_summary">Perform a swipe from the delete key to select and remove bigger portions of text at once</string>
    <string name="backup_restore_title">Backup and restore</string>
    <string name="backup_restore_message">Save or load from file. Warning: restore will overwrite existing data</string>
    <string name="backup_error">Backup error: %s</string>
    <string name="restore_error">Error restoring the backup: %s</string>
    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>
    <string name="backup_restored">Backup restored</string>
    <string name="timestamp_format_title">Format for timestamp key</string>
    <string name="secondary_locale">Multilingual typing</string>
    <string name="locales_with_dict">Languages with dictionaries</string>
    <string name="load_gesture_library">Load gesture typing library</string>
    <string name="load_gesture_library_summary">Provide a native library to enable gesture typing</string>
    <string name="load_gesture_library_message">You will need the library for \'%s\'. Incompatible libraries may crash when using gesture typing.
        \n\nWarning: loading external code can be a security risk. Only use a library from a source you trust.</string>
    <string name="checksum_mismatch_message">Unknown library file. Are you sure you got it from a trusted source and it is for \'%s\'?</string>
    <string name="load_gesture_library_button_load">Load library</string>
    <string name="load_gesture_library_button_delete">Delete library</string>
    <string name="autospace_after_punctuation">Autospace after punctuation</string>
    <string name="autospace_after_punctuation_summary">Automatically insert space after punctuation when typing a new word</string>
    <string name="autospace_after_suggestion">Autospace after picking a suggestion</string>
    <string name="autospace_before_gesture_typing">Autospace before gesture typing a word</string>
    <string name="autospace_after_gesture_typing">Autospace after gesture typing a word</string>
    <string name="shift_removes_autospace">No autospace when pressing shift</string>
    <string name="shift_removes_autospace_summary">Shift removes pending autospace</string>
    <string name="show_popup_keys_title">Show more letters with diacritics in popup</string>
    <string name="show_popup_keys_normal">Show variants defined in keyboard languages</string>
    <string name="show_popup_keys_main">Add very common variants (default)</string>
    <string name="show_popup_keys_more">Add common variants</string>
    <string name="show_popup_keys_all">Add all available variants</string>
    <string name="url_detection_title">URL detection</string>
    <string name="url_detection_summary">Try to detect URLs and similar as a single word</string>
    <string name="incognito">Force incognito mode</string>
    <string name="prefs_force_incognito_mode_summary">Disable learning of new words</string>
    <string name="more_keys_strip_description">More keys</string>
    <string name="language_and_layouts_title">Languages &amp; Layouts</string>
    <string name="number_row">Number row</string>
    <string name="number_row_summary">Always show number row</string>
    <string name="localized_number_row">Localize number row</string>
    <string name="localized_number_row_summary">Prefer localized over latin numbers</string>
    <string name="number_row_hints">Show hints on number row</string>
    <string name="show_hints">Show key hints</string>
    <string name="show_hints_summary">Show long-press hints</string>
    <string name="enable_tenor_search">Enable Klipy GIF search</string>
    <string name="enter_tenor_api_key">Enter Klipy API key</string>
    <string name="get_tenor_api_key">Get an API key</string>
    <string name="tenor_warning_no_key">Klipy API key required to search GIFs</string>
    <string name="tenor_gif_options">Klipy GIF Options</string>
    <string name="gif_share_size">GIF Share Size</string>
</resources>